# KNet

./: LICENSE  README.md  pyproject.toml
Standardization/: Standardization_Pipeline.py
data/: ChemSpace_86K_cmpds_example_set.csv  Enamine_FDA_approved_Drugs_1122cmpds_example_set.csv  Enamine_Kinase_Targeted_Library_64880_cmpds_example_set.csv  Natural_Products_MEGx_NATx_41820_cmpds_example_set.csv
figure/: Figure2.py  Figure3.py  Figure4.py  Figure5.py  Figure6.py  script.py
figures/: main.py
knet-backend/: .gitignore  Dockerfile  README.md  requirements.txt
knet-backend/app/: .gitattributes  function_app.py
knet-backend/app/Standardization_Pipeline/: AutoMID_classifier_standarization_pipeline.py  aggressiveSaltLibrary.sdf  conservativeSaltLibrary.sdf  logger.py
knet-backend/app/dc_keras_model_KAPI_cutoff6_epoch100/: checkpoint  ckpt-271.data-00000-of-00001  ckpt-271.index  ckpt-272.data-00000-of-00001  ckpt-272.index  ckpt-273.data-00000-of-00001  ckpt-273.index  ckpt-274.data-00000-of-00001  ckpt-274.index  ckpt-275.data-00000-of-00001  ckpt-275.index
knet-frontend/: index.html  package-lock.json  package.json
knet-frontend/src/: App.css  App.jsx  index.css
knet-frontend/src/components/: Heatmap.jsx  Table.jsx  utils.jsx
knet-frontend/src/views/: About.jsx  Acknowledgement.jsx  Standardizer.jsx  Submission.jsx
